desktop view done, need to fix images and work on mobile view next

--- a/src/App.css
+++ b/src/App.css
@@ -69,10 +69,12 @@ html {
 
 .desc {
   font-size: 15px;
-  width: 300px;
+  width: 400px;
   overflow-wrap: break-word;  
   word-wrap: break-word; 
   word-break: break-word;
+  color: white;
+  margin-top: 40px;
 }
 
 .herokubtn {
@@ -129,7 +131,7 @@ html {
 .wrapper-title {
   display:flex;
   justify-content: left;
-  margin-left: 50px;
+  margin-left: 70px;
 }
 
 .greeting {
@@ -137,7 +139,7 @@ html {
   color: rgb(136, 255, 136);
   margin-top: 170px;
   text-align: left;
-  margin-left: 50px;
+  margin-left: 70px;
   overflow: hidden;
   white-space: nowrap;
   border-right: .15em solid white;
@@ -149,7 +151,7 @@ html {
   color: rgb(136, 255, 136);
   font-weight: 600;
   text-align: left;
-  margin-left: 50px;
+  margin-left: 70px;
   overflow: hidden;
   white-space: nowrap;
   border-right: .15em solid white;
@@ -159,7 +161,7 @@ html {
 
 @keyframes typing {
   from { width: 0 }
-  to { width: 48.3% }
+  to { width: 49.5% }
 }
 @keyframes blinking {
   from { border-color: transparent }
@@ -315,7 +317,8 @@ html {
   color: rgb(136, 255, 136);
   padding: 10px;
   float: left;
-  margin-left: 330px;
+  margin-left: 70px;
+  font-size: 25px;
 }
 
 .main-button:hover {
@@ -339,10 +342,7 @@ html {
   color:rgb(136, 255, 136);
   font-size: 17px;
   font-weight: 300;
-  position:absolute;
-  left:0;
-  bottom:0;
-  right:0;
+  margin-top: 50vh;
 }
 
 .contact-title-top {
@@ -361,5 +361,6 @@ html {
 .skills {
   color:rgb(136, 255, 136);
   font-weight: 600;
+  margin-top: 40px;
 }
 
